--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');
 
 * {
-  padding: 0%;
-  margin: 0%;
+  margin: 0;
+  font-family: "IBM Plex Mono", monospace;
 }
 
-body{
+body {
   font-family: "IBM Plex Mono", monospace;
   background: black;
   color: white;
   /* min-height: 100%; */
+}
+
+#root {
   height: 100vh;
 }
