--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap");
 
 * {
-  margin: 0;
-  font-family: "IBM Plex Mono", monospace;
+	margin: 0;
+	font-family: "IBM Plex Mono", monospace;
 }
 
 body {
-  background: black;
-  color: white;
+	background: black;
+	color: white;
 }
 
 #root {
-  height: 100vh;
+	height: 100vh;
 }
 
 @media screen and (max-width: 600px) {
-  #root {
-    height: 93vh;
-  }
+	#root {
+		height: 93vh;
+	}
 }
